updated picom opacity-rules

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -134,7 +134,9 @@ opacity-rule = [
   "100:class_g = 'firefox' && !focused",
   "100:class_g = 'Chromium' && !focused",
   "100:class_g = 'War Thunder (Vulkan, 64bit)' && focused",
-  "100:class_g = 'War Thunder (Vulkan, 64bit) - In battle' && focused"
+  "100:class_g = 'War Thunder (Vulkan, 64bit) - In battle' && focused",
+  "100:class_g = 'ck3'",
+  "98:class_g = 'obsidian' && focused"
   ];
 #
 # opacity-rule = []
